<resources>
    <string name="app_name">EstrellaBet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_livescore">Welcome to LiveScore.</string>
    <string name="live_score">Live Score</string>
    <string name="barca">https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_%28crest%29.svg/1200px-FC_Barcelona_%28crest%29.svg.png</string>
    <string name="football_news">Football News</string>
    <string name="match_schedule">Match Schedule</string>
    <string name="see_all">See All</string>
    <string name="test">test test test test test test test test trest tettet test teste test test test</string>
    <string name="final_score">Final score</string>
    <string name="statistic_match">Statistic Match</string>
    <string name="shoot">Shoot</string>
    <string name="shoot_on_target">Shoot on target</string>
    <string name="ball_possession">Ball possession</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="red_card">Red card</string>
    <string name="corner_kick">Corner kick</string>
    <string name="bernli">https://upload.wikimedia.org/wikipedia/ru/thumb/6/62/Burnley_F.C._Logo.svg/200px-Burnley_F.C._Logo.svg.png</string>
    <string name="mc">https://upload.wikimedia.org/wikipedia/ru/thumb/9/96/Manchester_City_FC.svg/1200px-Manchester_City_FC.svg.png</string>
    <string name="arsenal">https://upload.wikimedia.org/wikipedia/ru/thumb/5/53/Arsenal_FC.svg/1200px-Arsenal_FC.svg.png</string>
    <string name="nottingam">https://upload.wikimedia.org/wikipedia/ru/thumb/8/8f/Nottingham_Forest.svg/1200px-Nottingham_Forest.svg.png</string>
    <string name="al_hilal">https://upload.wikimedia.org/wikipedia/commons/8/8c/Alhilal_FC.png</string>
    <string name="al_nasr">https://upload.wikimedia.org/wikipedia/ru/6/6b/Al_Nassr_FC_%28%D0%BB%D0%BE%D0%B3%D0%BE%D1%82%D0%B8%D0%BF%29.png</string>
    <string name="news_1">Саудовский «Аль-Хиляль» согласовал стоимость вратаря «Севильи» Яссина Боно, сообщает инсайдер Фабрицио Романо в своём «твиттере».

По данным источника, саудовцы заплатят испанцам € 19 млн плюс 2 млн в виде бонусов. В данный момент «Аль-Хиляль» ведёт переговоры с самим игроком, договариваясь с ним об условиях личного соглашения. Ожидается, что вскоре все стороны придут к полному соглашению.

Напомним, ранее сообщалось, что «Бавария» вышла из переговоров по Боно, поскольку не смогла предложить футболисту зарплату, соответствующую той, что предложил саудовский клуб. В прошедшем сезоне на счету Яссина 36 матчей за «Севилью» во всех турнирах. Марокканец вошёл в тройку лучших вратарей по итогам чемпионата мира — 2022. Голкипер выступает за андалусийцев на протяжении трёх лет (с 2020 года).

Контракт игрока с испанским клубом действует до конца июня 2025 года. Ориентировочная стоимость 32-летнего вратаря, по данным интернет-портала Transfermarkt, – € 12 млн.</string>
    <string name="news_2">«Саутгемптон» согласовал продажу полузащитника Ромео Лавиа в «Челси» за € 62 млн. «Манчестер Сити», продавший игрока сезон назад, получит от сделки € 12,4 млн (20%). Об этом сообщает журналист Давид Орнштейн в «Твиттере».

19-летний Лавиа в прошлом сезоне сыграл 35 матчей за «Саутгемптон» во всех турнирах, отметившись в них одним голом и одной результативной передачей. Контракт игрока с нынешним клубом действует до конца июня 2027 года. Ориентировочная стоимость футболиста, по данным интернет-портала Transfermarkt, – € 32 млн.

Ранее стало известно, что Лавиа предпочёл отказать «Ливерпулю» для перехода в «Челси». Сообщалось, что с синими футболист подпишет контракт по схеме «7+1» и будет получать больше, чем предлагал «Ливерпуль».</string>
    <string name="news_3">В матче 1/2 финала Кубка лиг встретятся американские «Филадельфия Юнион» и «Интер Майами». Команды будут играть на стадионе «Субару Парк» в Честере (Пенсильвания, США). Начало матча — в 2:00 по московскому времени.

Стартовые составы команд:

«Филадельфия Юнион»: Блэйк, Лоу, Глеснес, Эллиот, Харриэль, Флэк, Буэно, Вагнер, Мартинес, Газдаг, Донован.

«Интер Майами»: Коллендер, Альба, Миллер, Кривцов, Йедлин, Кремаски, Арройо, Бускетс, Тэйлор, Месси, Мартинес.

В Кубке лиг выступают команды из США и Мексики. На групповом этапе команда Лионеля Месси одержала две победы. В 1-м туре клуб обыграл мексиканский «Крус Асуль» со счётом 2:1, во 2-м туре победил «Атланту Юнайтед» — 4:0. Таким образом, «Интер Майами» занял первое место в группе Юг 3.</string>
    <string name="news_4">Полузащитник «Реала» Лука Модрич разочарован своей ролью в команде.

Как сообщает Mundo Deportivo, хорват при продлении контракта с мадридским клубом рассчитывал, что продолжит играть в основе команды, однако наставник Карло Анчелотти не планирует регулярно выпускать футболиста в старте.

Напомним, ранее сообщалось, что 37-летний хорват отклонил предложение саудовского «Аль-Насра», так как он хочет играть и сражаться за клуб всей его жизни. Новый контракт Модрича с «Реалом» рассчитан до конца следующего сезона.

Модрич играет за «сливочных» с 2012 года. В минувшем сезоне хорватский полузащитник отыграл 51 матч за мадридский «Реал» во всех турнирах, в которых забил шесть мячей и отдал шесть результативных передач. Ориентировочная стоимость футболиста, по данным интернет-портала Transfermarkt, – € 10 млн.</string>
    <string name="news_5">Защитник «Барселоны» Клеман Лангле предпочёл бы остаться в европейском клубе, а не переезжать в Саудовскую Аравию, сообщает Marca.

По информации источника, сине-гранатовые намерены продать 28-летнего француза и имеют предложение от «Аль-Насра». Однако сам Лангле пока не согласился на этот трансфер, хотя и не отверг предложение саудовцев.

Защитнику понадобится ещё несколько дней, чтобы определиться со своим будущим. Эта задержка может повлиять на планы «Барселоны». Клуб пытается продать Лангле, чтобы использовать полученные средства для подписания двух футболистов, одним из которых, вероятно, будет правый защитник.

На прошлой неделе сине-гранатовые расстались с хавбеком Франком Кессье и нападающим Усманом Дембеле. Полузащитника купил саудовский «Аль-Ахли», а форварда – «ПСЖ».

Лангле прошлый сезон провёл на правах аренды в «Тоттенхэме». За лондонцев он провёл 35 матчей и забил один гол.</string>
    <string name="news_6">Спортивный журналист, профессиональный комментатор Тимур Журавель рассказал, что нападающий «Локомотива» Артём Дзюба не хочет с ним общаться.

«Я забанен у Дзюбы. Вообще. Я вёл студию на одном из матчей «Локомотива» в этом сезоне. Мы позвали Дзюбу к себе, ему надо было подойти к кромке поля. Он преодолел полпути, но увидел меня и сказал: «Не, к нему не пойду». Развернулся и ушёл. Они с Леонидом Викторовичем вообще чемпионы по обидчивости.

Мне кажется, Дзюба и Слуцкий настолько крутые, настолько самодостаточные персоны, что разменивание на такие мелкие обиды просто недостойно их масштаба.

За что Дзюба меня забанил? Когда он Нобелю дал интервью, я у себя в телеграме написал рецензию короткую. В этих рецензиях, кстати, стараюсь быть крайне корректным. Потому что знаю, как все обижаются. Но Дзюба всё равно обиделся», – сказал Журавель в выпуске на YouTube-канале журналиста Глеба Чернявского.</string>
    <string name="news_7">Английский нападающий Билли Шарп подписал контракт с «Лос-Анджелес Гэлакси» до конца сезона МЛС с возможностью продления соглашения ещё на год, сообщает Associated Press.

«Билли — нападающий, который много добился, он обладает большим опытом, лидерскими качествами и доказал свою результативность. Мы рады получить в команду игрока такого калибра в текущем сезоне», — сказал главный тренер и спортивный директор «Гэлакси» Грег Ванни.

37-летний Шарп является лучшим бомбардиром в истории Чемпионшипа. За 399 матчей во втором по статусу английском дивизионе нападающий забил 130 голов.

Предыдущие восемь сезонов он отыграл в «Шеффилд Юнайтед», но клуб летом не стал продлевать с ним контракт. Также Шарп выступал за эту команду в начале своей карьеры. Всего за 12 сезонов в составе «клинков» форвард забил 129 мячей. Он никогда не играл за пределами Англии.

«Лос-Анджелес Гэлакси» в данный момент занимает 13-е место в Западной конференции МЛС. На счету команды 22 очка после 22 матчей. У клуба остаётся ещё 12 игр, чтобы побороться за попадание в плей-офф. Отставание «Гэлакси» от девятого места, которое даёт право на выступление в раунде уайлд-кард, составляет восемь очков.</string>
    <string name="news_8">Футболист «Манчестер Сити» Эмерик Лапорт согласился продолжить карьеру в саудовском клубе «Аль-Наср». Об этом сообщает Football Talk в своём «твиттере» со ссылкой на журналиста Бадра Фархана.

По сведениям источника, 29-летний защитник дал согласие на переезд на Ближний Восток, а «горожане» открыты к продаже футболиста. В настоящее время сделка ожидает финансового одобрения Государственного инвестиционного фонда Саудовской Аравии.

Напомним, ранее сообщалось, что Лапорт, скорее всего, покинет «Манчестер Сити» в это трансферное окно, среди заинтересованных в его услугах сторон назывался «Атлетик» (Бильбао). Эмерик выступает за «Манчестер Сити» с января 2018 года. В минувшем сезоне Лапорт провёл за «Сити» 24 матча во всех турнирах. Соглашение между сторонами истекает летом 2025 года.

Прежде испанец с французскими корнями выступал как раз за «Атлетик», в составе которого он стал обладателем Суперкубка Испании в 2015 году.</string>
    <string name="news_9">Бывший аргентинский нападающий Карлос Тевес объяснил, почему в своё время принял решение переехать в чемпионат Китая. C 2017 по 2018 год Тевес выступал за «Шанхай Шэньхуа».

«Многие критиковали меня за то, что я уехал в Китай. Но на самом деле они не знают моей истории. Благодаря этому этапу карьеры я заработал много денег. Но знаете, что я сделал? Я сказал своему агенту, что мне не нужны эти деньги, я просто хочу купить 15 домов и вывезти свою семью из Фуэрте-Апача (бедный район в городе Сьюдадела в провинции Буэнос-Айрес. — Прим. «Чемпионата»).

Этого никто не знает, но я пытаюсь содержать 15 семей, включая моих братьев, дядь и так далее. А если начать считать, то получается около 60 человек. Всё, что я делал, было ради того, чтобы у нового поколения Тевесов была жизнь лучше, чтобы у них было хорошее образование и чтобы они не прошли через то, через что прошёл я», — приводит слова Тевеса Football Tweet в «Твиттере».</string>
    <string name="news_10">Российский хоккеист Александр Овечкин, выступающий за «Вашингтон Кэпиталз», обратился к нападающему «Локомотива» Артёму Дзюбе.

«Пожелания Дзюбе? Удачи, в карьере — продолжения! Самое главное, чтобы забивал и двигался на поле, как в былые добрые времена. И здоровья, конечно!» — приводит слова Овечкина «Матч ТВ».

Российский нападающий Артём Дзюба стал игроком «Локомотива» в феврале 2023 года, подписав контракт до конца сезона. Затем спортсмен продлил соглашение с командой ещё на сезон. Всего за «Локомотив» Дзюба в 17 матчах забил девять голов и отдал пять результативных передач.

Прошлый сезон Дзюба начал в Турции в составе клуба «Адана Демирспор», где в пяти матчах забил один гол. В ноябре 2022 года Дзюба расторг с командой контракт.</string>
    <string name="arsenal2">https://upload.wikimedia.org/wikipedia/ru/thumb/5/53/Arsenal_FC.svg/1200px-Arsenal_FC.svg.png</string>
    <string name="mu">https://upload.wikimedia.org/wikipedia/ru/thumb/7/7a/Manchester_United_FC_crest.svg/1200px-Manchester_United_FC_crest.svg.png</string>
    <string name="liver">https://upload.wikimedia.org/wikipedia/ru/thumb/0/0a/FC_Liverpool.svg/1200px-FC_Liverpool.svg.png</string>
    <string name="west_ham">https://upload.wikimedia.org/wikipedia/ru/thumb/9/9d/West_Ham_United_FC_logo_2015.svg/1200px-West_Ham_United_FC_logo_2015.svg.png</string>
    <string name="new_castle">https://upload.wikimedia.org/wikipedia/ru/thumb/5/56/Newcastle_United_Logo.svg/1200px-Newcastle_United_Logo.svg.png</string>
</resources>