<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".presentation.fragment.MainFragment">

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Estrela"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/star_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bet"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <View
            android:layout_width="40dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_score"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_finished_matches"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll2"
        tools:itemCount="3"
        tools:listitem="@layout/item_finished_layout" />

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_finished_matches">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="@string/match_schedule"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btn_see_all"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:paddingEnd="20dp"
            android:text="@string/see_all"
            android:textColor="#EAAFF1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcoming_matches"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll3"
        tools:listitem="@layout/item_upcoming_match" />

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_upcoming_matches">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="@string/football_news"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btn_see_all_news"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:paddingEnd="20dp"
            android:text="@string/see_all"
            android:textColor="#EAAFF1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:background="@drawable/ll_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll4">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/item_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="4dp"
            android:src="@drawable/test"
            app:riv_border_color="@color/white"
            app:riv_border_width="1dp"
            app:riv_corner_radius="10dp" />

        <TextView
            android:id="@+id/tv_news_item"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="3"
            android:padding="10dp"
            android:text="@string/test"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>