<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".presentation.FinishedMatchesActivity">

    <ImageView
        android:id="@+id/back_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_statistic"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/final_score"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_img"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_statistic">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/team1_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/test" />

            <TextView
                android:id="@+id/team1Scorers"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/score_of_match"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="2 - 2"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/team2_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/test" />

            <TextView
                android:id="@+id/team2Scorers"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_statistic_match"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/statistic_match"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1" />

    <LinearLayout
        android:id="@+id/ll_shoot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_statistic_match">

        <TextView
            android:id="@+id/team1_shoot"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="11"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/shoot"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/team2_shoot"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="11"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_shot_on_target"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_shoot">

        <TextView
            android:id="@+id/team1_shoot_on_target"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="11"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/shoot_on_target"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/team2_shoot_on_target"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="11"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ball_possession"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_shot_on_target">

        <TextView
            android:id="@+id/team1_ball_possession"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="11"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/ball_possession"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/team2_ball_possession"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="11"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_yellow_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_ball_possession">

        <TextView
            android:id="@+id/team_1_yellow_card"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="11"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/yellow_cards"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/team2_yellow_card"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="11"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_red_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_yellow_card">

        <TextView
            android:id="@+id/team1_red_card"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="11"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/red_card"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/team2_red_card"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="11"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_corner_kick"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_red_card">

        <TextView
            android:id="@+id/team1_corner_kick"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="11"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/corner_kick"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/team2_corner_kick"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="11"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>